fix/widget-fixups-and-cleanup (#63)
* fix: preserve price difference product formatting

* fix: align order widget row spacing

* fix: reset tooltip delay when scrolling

* fix: promote rounded compact number tiers

* refactor: render widgets through native GUI

* fix: smooth widget list scrolling

* fix: harden retained widget list updates

* refactor: centralize widget helpers

* feat: add widget previews to config screen

* refactor: move widget management command to separate class

* refactor: apply initial review cleanup

* style: improve widget code readability

* fix: restore widget command under btrbz